compilers/compile/TinyParser.py
# Generated from Tiny.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class TinyParser ( Parser ):

    grammarFileName = "Tiny.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'PROGRAM'", "'BEGIN'", "'END'", "'STRING'", 
                     "':='", "';'", "'FLOAT'", "'INT'", "'VOID'", "','", 
                     "'('", "')'", "'FUNCTION'", "'READ'", "'WRITE'", "'RETURN'", 
                     "'+'", "'-'", "'*'", "'/'", "'IF'", "'ENDIF'", "'ELSE'", 
                     "'<'", "'>'", "'='", "'!='", "'<='", "'>='", "'WHILE'", 
                     "'ENDWHILE'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ID", "STR", "WS", "INTLITERAL", "FLOATLITERAL", "STRINGLITERAL", 
                      "COMMENT", "KEYWORD", "IDENTIFIER", "OPERATOR" ]

    RULE_start = 0
    RULE_program = 1
    RULE_pgm_body = 2
    RULE_decl = 3
    RULE_string_decl = 4
    RULE_var_decl = 5
    RULE_var_type = 6
    RULE_any_type = 7
    RULE_id_list = 8
    RULE_id_tail = 9
    RULE_param_decl_list = 10
    RULE_param_decl = 11
    RULE_param_decl_tail = 12
    RULE_func_declarations = 13
    RULE_func_decl = 14
    RULE_func_body = 15
    RULE_stmt_list = 16
    RULE_stmt = 17
    RULE_base_stmt = 18
    RULE_assign_stmt = 19
    RULE_assign_expr = 20
    RULE_read_stmt = 21
    RULE_write_stmt = 22
    RULE_return_stmt = 23
    RULE_expr = 24
    RULE_expr_prefix = 25
    RULE_factor = 26
    RULE_factor_prefix = 27
    RULE_postfix_expr = 28
    RULE_call_expr = 29
    RULE_expr_list = 30
    RULE_expr_list_tail = 31
    RULE_primary = 32
    RULE_addop = 33
    RULE_mulop = 34
    RULE_if_stmt = 35
    RULE_else_part = 36
    RULE_cond = 37
    RULE_compop = 38
    RULE_while_stmt = 39

    ruleNames =  [ "start", "program", "pgm_body", "decl", "string_decl", 
                   "var_decl", "var_type", "any_type", "id_list", "id_tail", 
                   "param_decl_list", "param_decl", "param_decl_tail", "func_declarations", 
                   "func_decl", "func_body", "stmt_list", "stmt", "base_stmt", 
                   "assign_stmt", "assign_expr", "read_stmt", "write_stmt", 
                   "return_stmt", "expr", "expr_prefix", "factor", "factor_prefix", 
                   "postfix_expr", "call_expr", "expr_list", "expr_list_tail", 
                   "primary", "addop", "mulop", "if_stmt", "else_part", 
                   "cond", "compop", "while_stmt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    ID=32
    STR=33
    WS=34
    INTLITERAL=35
    FLOATLITERAL=36
    STRINGLITERAL=37
    COMMENT=38
    KEYWORD=39
    IDENTIFIER=40
    OPERATOR=41

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def program(self):
            return self.getTypedRuleContext(TinyParser.ProgramContext,0)


        def EOF(self):
            return self.getToken(TinyParser.EOF, 0)

        def getRuleIndex(self):
            return TinyParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)




    def start(self):

        localctx = TinyParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.program()
            self.state = 81
            self.match(TinyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TinyParser.ID, 0)

        def pgm_body(self):
            return self.getTypedRuleContext(TinyParser.Pgm_bodyContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = TinyParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(TinyParser.T__0)
            self.state = 84
            self.match(TinyParser.ID)
            self.state = 85
            self.match(TinyParser.T__1)
            self.state = 86
            self.pgm_body()
            self.state = 87
            self.match(TinyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Pgm_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(TinyParser.DeclContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(TinyParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_pgm_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPgm_body" ):
                listener.enterPgm_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPgm_body" ):
                listener.exitPgm_body(self)




    def pgm_body(self):

        localctx = TinyParser.Pgm_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_pgm_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.decl()
            self.state = 90
            self.func_declarations()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def string_decl(self):
            return self.getTypedRuleContext(TinyParser.String_declContext,0)


        def decl(self):
            return self.getTypedRuleContext(TinyParser.DeclContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(TinyParser.Var_declContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = TinyParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_decl)
        try:
            self.state = 99
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TinyParser.T__3]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.string_decl()
                self.state = 93
                self.decl()
                pass
            elif token in [TinyParser.T__6, TinyParser.T__7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.var_decl()
                self.state = 96
                self.decl()
                pass
            elif token in [TinyParser.T__2, TinyParser.T__12, TinyParser.T__13, TinyParser.T__14, TinyParser.T__15, TinyParser.T__20, TinyParser.T__21, TinyParser.T__22, TinyParser.T__29, TinyParser.T__30, TinyParser.ID]:
                self.enterOuterAlt(localctx, 3)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class String_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TinyParser.ID, 0)

        def STR(self):
            return self.getToken(TinyParser.STR, 0)

        def getRuleIndex(self):
            return TinyParser.RULE_string_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString_decl" ):
                listener.enterString_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString_decl" ):
                listener.exitString_decl(self)




    def string_decl(self):

        localctx = TinyParser.String_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_string_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(TinyParser.T__3)
            self.state = 102
            self.match(TinyParser.ID)
            self.state = 103
            self.match(TinyParser.T__4)
            self.state = 104
            self.match(TinyParser.STR)
            self.state = 105
            self.match(TinyParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(TinyParser.Var_typeContext,0)


        def id_list(self):
            return self.getTypedRuleContext(TinyParser.Id_listContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = TinyParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self.var_type()
            self.state = 108
            self.id_list()
            self.state = 109
            self.match(TinyParser.T__5)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return TinyParser.RULE_var_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_type" ):
                listener.enterVar_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_type" ):
                listener.exitVar_type(self)




    def var_type(self):

        localctx = TinyParser.Var_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_type)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            _la = self._input.LA(1)
            if not(_la==TinyParser.T__6 or _la==TinyParser.T__7):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Any_typeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(TinyParser.Var_typeContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_any_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAny_type" ):
                listener.enterAny_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAny_type" ):
                listener.exitAny_type(self)




    def any_type(self):

        localctx = TinyParser.Any_typeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_any_type)
        try:
            self.state = 115
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TinyParser.T__6, TinyParser.T__7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 113
                self.var_type()
                pass
            elif token in [TinyParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 114
                self.match(TinyParser.T__8)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TinyParser.ID, 0)

        def id_tail(self):
            return self.getTypedRuleContext(TinyParser.Id_tailContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)




    def id_list(self):

        localctx = TinyParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.match(TinyParser.ID)
            self.state = 118
            self.id_tail()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(TinyParser.ID, 0)

        def id_tail(self):
            return self.getTypedRuleContext(TinyParser.Id_tailContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_id_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_tail" ):
                listener.enterId_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_tail" ):
                listener.exitId_tail(self)




    def id_tail(self):

        localctx = TinyParser.Id_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_id_tail)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TinyParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 120
                self.match(TinyParser.T__9)
                self.state = 121
                self.match(TinyParser.ID)
                self.state = 122
                self.id_tail()
                pass
            elif token in [TinyParser.T__5, TinyParser.T__11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decl_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(TinyParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(TinyParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_param_decl_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_list" ):
                listener.enterParam_decl_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_list" ):
                listener.exitParam_decl_list(self)




    def param_decl_list(self):

        localctx = TinyParser.Param_decl_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param_decl_list)
        try:
            self.state = 134
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.match(TinyParser.T__10)
                self.state = 127
                self.param_decl()
                self.state = 128
                self.param_decl_tail()
                self.state = 129
                self.match(TinyParser.T__11)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 131
                self.match(TinyParser.T__10)
                self.state = 132
                self.match(TinyParser.T__11)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_type(self):
            return self.getTypedRuleContext(TinyParser.Var_typeContext,0)


        def ID(self):
            return self.getToken(TinyParser.ID, 0)

        def getRuleIndex(self):
            return TinyParser.RULE_param_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl" ):
                listener.enterParam_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl" ):
                listener.exitParam_decl(self)




    def param_decl(self):

        localctx = TinyParser.Param_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_param_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.var_type()
            self.state = 137
            self.match(TinyParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_decl_tailContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_decl(self):
            return self.getTypedRuleContext(TinyParser.Param_declContext,0)


        def param_decl_tail(self):
            return self.getTypedRuleContext(TinyParser.Param_decl_tailContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_param_decl_tail

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_decl_tail" ):
                listener.enterParam_decl_tail(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_decl_tail" ):
                listener.exitParam_decl_tail(self)




    def param_decl_tail(self):

        localctx = TinyParser.Param_decl_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_decl_tail)
        try:
            self.state = 144
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TinyParser.T__9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 139
                self.match(TinyParser.T__9)
                self.state = 140
                self.param_decl()
                self.state = 141
                self.param_decl_tail()
                pass
            elif token in [TinyParser.T__11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declarationsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def func_decl(self):
            return self.getTypedRuleContext(TinyParser.Func_declContext,0)


        def func_declarations(self):
            return self.getTypedRuleContext(TinyParser.Func_declarationsContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_func_declarations

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_declarations" ):
                listener.enterFunc_declarations(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_declarations" ):
                listener.exitFunc_declarations(self)




    def func_declarations(self):

        localctx = TinyParser.Func_declarationsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_func_declarations)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TinyParser.T__12]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.func_decl()
                self.state = 147
                self.func_declarations()
                pass
            elif token in [TinyParser.T__2]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def any_type(self):
            return self.getTypedRuleContext(TinyParser.Any_typeContext,0)


        def ID(self):
            return self.getToken(TinyParser.ID, 0)

        def param_decl_list(self):
            return self.getTypedRuleContext(TinyParser.Param_decl_listContext,0)


        def func_body(self):
            return self.getTypedRuleContext(TinyParser.Func_bodyContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)




    def func_decl(self):

        localctx = TinyParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_func_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(TinyParser.T__12)
            self.state = 153
            self.any_type()
            self.state = 154
            self.match(TinyParser.ID)
            self.state = 155
            self.param_decl_list()
            self.state = 156
            self.match(TinyParser.T__1)
            self.state = 157
            self.func_body()
            self.state = 158
            self.match(TinyParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_bodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(TinyParser.DeclContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(TinyParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_func_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_body" ):
                listener.enterFunc_body(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_body" ):
                listener.exitFunc_body(self)




    def func_body(self):

        localctx = TinyParser.Func_bodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_func_body)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.decl()
            self.state = 161
            self.stmt_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Stmt_listContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(TinyParser.StmtContext,0)


        def stmt_list(self):
            return self.getTypedRuleContext(TinyParser.Stmt_listContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_stmt_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt_list" ):
                listener.enterStmt_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt_list" ):
                listener.exitStmt_list(self)




    def stmt_list(self):

        localctx = TinyParser.Stmt_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_stmt_list)
        try:
            self.state = 167
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TinyParser.T__13, TinyParser.T__14, TinyParser.T__15, TinyParser.T__20, TinyParser.T__29, TinyParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 163
                self.stmt()
                self.state = 164
                self.stmt_list()
                pass
            elif token in [TinyParser.T__2, TinyParser.T__21, TinyParser.T__22, TinyParser.T__30]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def base_stmt(self):
            return self.getTypedRuleContext(TinyParser.Base_stmtContext,0)


        def if_stmt(self):
            return self.getTypedRuleContext(TinyParser.If_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(TinyParser.While_stmtContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)




    def stmt(self):

        localctx = TinyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 34, self.RULE_stmt)
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [TinyParser.T__13, TinyParser.T__14, TinyParser.T__15, TinyParser.ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.base_stmt()
                pass
            elif token in [TinyParser.T__20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.if_stmt()
                pass
            elif token in [TinyParser.T__29]:
                self.enterOuterAlt(localctx, 3)
                self.state = 171
                self.while_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Base_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(TinyParser.Assign_stmtContext,0)


        def read_stmt(self):
            return self.getTypedRuleContext(TinyParser.Read_stmtContext,0)


        def write_stmt(self):
            return self.getTypedRuleContext(TinyParser.Write_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(TinyParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return TinyParser.RULE_base_stmt
